Got Product containers styled and in the correct position need to correct sidebar positioning and add proper spacing throughout.

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,6 +6,7 @@ $gutter:0em;
 
 @import '../bower_components/neat/app/assets/stylesheets/neat';
 
+
 /* @mixin clearfix {
     * zoom: 1;
     &:before, &:after {
@@ -35,6 +36,7 @@ html {
 body {
   overflow-y: scroll;
   overflow-x: hidden;
+  font-family: Arial, sans-serif;
 }
 
 .centeredContainer{
@@ -71,9 +73,11 @@ h2{
   font-size: 1em;
 }
 
-/* .resultsRefineContainer{
+.resultsRefineContainer{
+  @include span-columns (3 of 12);
   height: 1082px;
-} */
+  display: inline-block;
+}
 .resultCategories{
   @include span-columns(3);
   background-color: #FFFFFF;
@@ -88,20 +92,69 @@ h2{
 
 
 .refineSearch{
-  @include span-columns(3);
+  @include span-columns(3 of 12);
   height: 680px;
   background-color: #FFFFFF;
   border: 1px solid #E1E3DF;
   border-radius: 3px;
 }
+
+
+.mainContent{
+  @include span-columns(9 of 12);
+}
+
+
+.product-grid li{
+  @include span-columns(3 of 9);
+  @include omega(3n);
+  height:220px;
+  background-color: #FFFFFF;
+  border: 1px solid #E1E3DF;
+  border-radius: 3px;
+/*   margin:9px; */
+}
+
+.product-grid h2{
+  font-size:12px;
+  color:#555555;
+  overflow:hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  margin: 6px 6px 3px 6px;
+
+}
+
+.product-grid h4{
+  color:#70C056;
+  font-size:16px;
+  display:inline-block;
+  float:right;
+  margin-right: 6px;
+  margin-bottom: 6px;
+}
+
+.product-grid img{
+  width: 100%;
+  height: 172px;
+
+
+}
+
+
 //Main Product Grid//
-.productGrid{
+//NEED TO RESTYLE FOR HANDLEBARS//
+/* .productGrid{
   @include span-columns(9);
   height:100%;
  padding-left:18px;
  display:inline-block;
 }
 
+.productGrid li{
+  @include span-columns(3);
+  height: 175px;
+}
 .productContainers{
   @include span-columns(3);
   height: 220px;
@@ -109,3 +162,4 @@ h2{
   border: 1px solid #E1E3DF;
   border-radius: 3px;
 }
+ */
